// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly when currentStep === step1 1`] = `
<div
  className="panel-group"
  role="tablist"
>
  <div
    className="TutorialStep TutorialStep--current panel panel-primary"
    id={null}
  >
    <div
      className="panel-heading"
    >
      <div
        className="TutorialStep-title panel-title"
      >
        <a
          aria-controls={undefined}
          aria-expanded={true}
          aria-selected={true}
          className={null}
          href={undefined}
          onClick={[Function]}
          role="tab"
        >
          <span>
            Step 
            1
             
            My step 1
          </span>
          <span
            className="pull-right"
          >
            <button
              className="btn btn-default"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Skip
            </button>
          </span>
        </a>
      </div>
    </div>
    <div
      aria-expanded={null}
      aria-hidden={false}
      className="panel-collapse collapse in"
      id={undefined}
      role="tabpanel"
    >
      <div
        className="panel-body"
      >
        <div>
          <p>
            My step 1 description
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    className="TutorialStep panel panel-default"
    id={null}
  >
    <div
      className="panel-heading"
    >
      <div
        className="TutorialStep-title panel-title"
      >
        <a
          aria-controls={undefined}
          aria-expanded={false}
          aria-selected={false}
          className="collapsed"
          href={undefined}
          onClick={[Function]}
          role="tab"
        >
          <span>
            Step 
            2
             
            My step 2
          </span>
        </a>
      </div>
    </div>
    <div
      aria-expanded={null}
      aria-hidden={true}
      className="panel-collapse collapse"
      id={undefined}
      role="tabpanel"
    >
      <div
        className="panel-body"
      >
        <div>
          <p>
            My step 2 description
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    className="TutorialStep panel panel-default"
    id={null}
  >
    <div
      className="panel-heading"
    >
      <div
        className="TutorialStep-title panel-title"
      >
        <a
          aria-controls={undefined}
          aria-expanded={false}
          aria-selected={false}
          className="collapsed"
          href={undefined}
          onClick={[Function]}
          role="tab"
        >
          <span>
            Step 
            3
             
            My step 3
          </span>
        </a>
      </div>
    </div>
    <div
      aria-expanded={null}
      aria-hidden={true}
      className="panel-collapse collapse"
      id={undefined}
      role="tabpanel"
    >
      <div
        className="panel-body"
      >
        <div>
          <p>
            My step 3 description
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly when currentStep === step2 1`] = `
<div
  className="panel-group"
  role="tablist"
>
  <div
    className="TutorialStep TutorialStep--completed panel panel-success"
    id={null}
  >
    <div
      className="panel-heading"
    >
      <div
        className="TutorialStep-title panel-title"
      >
        <a
          aria-controls={undefined}
          aria-expanded={false}
          aria-selected={false}
          className="collapsed"
          href={undefined}
          onClick={[Function]}
          role="tab"
        >
          <span>
            Step 
            1
             
            My step 1
          </span>
        </a>
      </div>
    </div>
    <div
      aria-expanded={null}
      aria-hidden={true}
      className="panel-collapse collapse"
      id={undefined}
      role="tabpanel"
    >
      <div
        className="panel-body"
      >
        <div>
          <p>
            My step 1 description
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    className="TutorialStep TutorialStep--current panel panel-primary"
    id={null}
  >
    <div
      className="panel-heading"
    >
      <div
        className="TutorialStep-title panel-title"
      >
        <a
          aria-controls={undefined}
          aria-expanded={true}
          aria-selected={true}
          className={null}
          href={undefined}
          onClick={[Function]}
          role="tab"
        >
          <span>
            Step 
            2
             
            My step 2
          </span>
          <span
            className="pull-right"
          >
            <button
              className="btn btn-default"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Skip
            </button>
          </span>
        </a>
      </div>
    </div>
    <div
      aria-expanded={null}
      aria-hidden={false}
      className="panel-collapse collapse in"
      id={undefined}
      role="tabpanel"
    >
      <div
        className="panel-body"
      >
        <div>
          <p>
            My step 2 description
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    className="TutorialStep panel panel-default"
    id={null}
  >
    <div
      className="panel-heading"
    >
      <div
        className="TutorialStep-title panel-title"
      >
        <a
          aria-controls={undefined}
          aria-expanded={false}
          aria-selected={false}
          className="collapsed"
          href={undefined}
          onClick={[Function]}
          role="tab"
        >
          <span>
            Step 
            3
             
            My step 3
          </span>
        </a>
      </div>
    </div>
    <div
      aria-expanded={null}
      aria-hidden={true}
      className="panel-collapse collapse"
      id={undefined}
      role="tabpanel"
    >
      <div
        className="panel-body"
      >
        <div>
          <p>
            My step 3 description
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly when currentStep === step3 1`] = `
<div
  className="panel-group"
  role="tablist"
>
  <div
    className="TutorialStep TutorialStep--completed panel panel-success"
    id={null}
  >
    <div
      className="panel-heading"
    >
      <div
        className="TutorialStep-title panel-title"
      >
        <a
          aria-controls={undefined}
          aria-expanded={false}
          aria-selected={false}
          className="collapsed"
          href={undefined}
          onClick={[Function]}
          role="tab"
        >
          <span>
            Step 
            1
             
            My step 1
          </span>
        </a>
      </div>
    </div>
    <div
      aria-expanded={null}
      aria-hidden={true}
      className="panel-collapse collapse"
      id={undefined}
      role="tabpanel"
    >
      <div
        className="panel-body"
      >
        <div>
          <p>
            My step 1 description
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    className="TutorialStep TutorialStep--completed panel panel-success"
    id={null}
  >
    <div
      className="panel-heading"
    >
      <div
        className="TutorialStep-title panel-title"
      >
        <a
          aria-controls={undefined}
          aria-expanded={false}
          aria-selected={false}
          className="collapsed"
          href={undefined}
          onClick={[Function]}
          role="tab"
        >
          <span>
            Step 
            2
             
            My step 2
          </span>
        </a>
      </div>
    </div>
    <div
      aria-expanded={null}
      aria-hidden={true}
      className="panel-collapse collapse"
      id={undefined}
      role="tabpanel"
    >
      <div
        className="panel-body"
      >
        <div>
          <p>
            My step 2 description
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    className="TutorialStep TutorialStep--current panel panel-primary"
    id={null}
  >
    <div
      className="panel-heading"
    >
      <div
        className="TutorialStep-title panel-title"
      >
        <a
          aria-controls={undefined}
          aria-expanded={true}
          aria-selected={true}
          className={null}
          href={undefined}
          onClick={[Function]}
          role="tab"
        >
          <span>
            Step 
            3
             
            My step 3
          </span>
        </a>
      </div>
    </div>
    <div
      aria-expanded={null}
      aria-hidden={false}
      className="panel-collapse collapse in"
      id={undefined}
      role="tabpanel"
    >
      <div
        className="panel-body"
      >
        <div>
          <p>
            My step 3 description
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
